--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-success">
+    <div class="d-flex bg-success shadow-md">
     <h1>Hello world</h1>
     <p>Hi there</p>
     </div>
