Created a homepage using HTML and CSS

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-success shadow-md">
-    <h1>Hello world</h1>
-    <p>Hi there</p>
-    <i class="fa-brands fa-instagram"></i>
-    
+    <div class="hero">
+      <p>👋Hi,I'am</p>
+      <h1>Grace Chifamba</h1>
+      <h2 class="mb-5">Front-end developer based in SouthAfrica</h2>
+      <div>
+      <a href="" class=" btn btn-branding">Contact me</a>
+      </div>
     </div>
   </body>
 </html>
