Added the Homepage content

--- a/index.html
+++ b/index.html
@@ -24,5 +24,50 @@
       <a href="" class=" btn btn-branding">Contact me</a>
       </div>
     </div>
-  </body>
+    <p class="m-5 text-center">
+      Featured Project which which my best project be choice to show</p>
+  <div class="container">
+  <div class="row">
+  <div class="col d-none d-lg-block shadow-sm">
+    <img src="images/baking.jpg" class="img-fluid" alt=""/>
+  </div>
+  <div class="col">
+    <div class="project-description">
+      <h2 class="mb-5">Baking Project</h2>
+    <p class="mb-5 text-muted">
+      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+    <a href="" class="btn btn-branding-outline">Learn more</a>
+    </div>
+    </div>
+  </div>
+    <div class="row">
+     <div class="col">
+      <div class="project-description">
+      <h2 class="mb-5 ">Weather App</h2>
+       <p class="mb-5">
+      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+     <a href="" class="btn btn-branding-outline">Learn more</a>
+   </div>
+     </div>
+  <div class="col d-none d-lg-block shadow-sm">
+ <img src="images/weather.jpg"class="img-fluid"alt=""/>
+ </div>
+    </div>
+     <div class="row">
+      <div class="col d-none d-lg-block shadow-sm">
+       <img src="images/directory.png"class="img-fluid"alt=""/>
+        </div>
+      <div class="col">
+          <div class="project-description">
+      <h2 class="mb-5">Dictionary App</h2>
+    <p class="mb-4">
+      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+ <a href="" class="btn btn-branding-outline">Learn more</a>
+      </div>
+        </div>
+       </div>
+       </div>
+    </div>
+ </div>
+ </body>
 </html>
