Update more content on the home page

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Front-end Developer</title>
   </head>
   <body>
     <div class="hero">
-      <p>👋Hi,I'am</p>
+      <p>👋Hi, I am</p>
       <h1>Grace Chifamba</h1>
       <h2 class="mb-5">Front-end developer based in SouthAfrica</h2>
       <div>
@@ -25,7 +25,7 @@
       </div>
     </div>
     <p class="m-5 text-center">
-      Featured Project which which my best project be choice to show</p>
+      Featured my best projects i have done so far</p>
   <div class="container">
   <div class="row">
   <div class="col d-none d-lg-block shadow-sm">
@@ -35,7 +35,7 @@
     <div class="project-description">
       <h2 class="mb-5">Baking Project</h2>
     <p class="mb-5 text-muted">
-      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+      This project is about me creating something  i love to do every chance i get.I love to spoil myself ,my family, and those around me, and the best way to do this, is by baking a cake.I created this project using the basic HTML,CSS and JavaScript</p>
     <a href="" class="btn btn-branding-outline">Learn more</a>
     </div>
     </div>
@@ -44,8 +44,8 @@
      <div class="col">
       <div class="project-description">
       <h2 class="mb-5 ">Weather App</h2>
-       <p class="mb-5">
-      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+       <p class="mb-5 text-muted" >
+      Developed a vanilla weather app using the following stages. Setup-includes creating a respitory at Git,Design,HTML,CSS,Search Engine-using advanced JavScript,API intergration and Forcast.Commit and publish at Git+Github then Deploy at Netlify</p>
      <a href="" class="btn btn-branding-outline">Learn more</a>
    </div>
      </div>
@@ -60,8 +60,8 @@
       <div class="col">
           <div class="project-description">
       <h2 class="mb-5">Dictionary App</h2>
-    <p class="mb-4">
-      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+    <p class="mb-5 text-muted">
+      An intuitive and user-friendly directory app.Implementing comprehensive word-search and defination functionalities using HTML,CSS and React.The seamless interaction between the front-end and back-end ensures real-time updates and accurate results for users seeking precise language information</p>
  <a href="" class="btn btn-branding-outline">Learn more</a>
       </div>
         </div>
