Added the header to the home page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
     <title>Front-end Developer</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+      <img src="images/logo.png"alt="">
+      <ul>
+        <li class="active">
+          <a href="/">Home</a>
+         </li>
+        <li>
+          <a href="/about.html">About</a>
+        </li>
+        <li>
+          <a href="/work.html">Work</a>
+        </li>
+        <li>
+          <a href="/contact.html">contact</a>
+        </li>
+      </ul>
+      </nav>
+    </div>
+    
     <div class="hero">
       <p>👋Hi, I am</p>
       <h1>Grace Chifamba</h1>
