Added the footer

--- a/index.html
+++ b/index.html
@@ -84,10 +84,38 @@
       An intuitive and user-friendly directory app.Implementing comprehensive word-search and defination functionalities using HTML,CSS and React.The seamless interaction between the front-end and back-end ensures real-time updates and accurate results for users seeking precise language information</p>
  <a href="" class="btn btn-branding-outline">Learn more</a>
       </div>
-        </div>
-       </div>
-       </div>
     </div>
+   </div>
  </div>
+ <footer>
+    <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+      <div>
+    <h4>
+      Work  Inquiry
+    </h4>
+    <p class="text-muted">Let's work together</p>
+      </div>
+      <div>
+    <a href=""class="btn btn-branding">Contact me</a>
+    </div>
+    </div>
+      <div class="d-flex justify-content-center">
+      <a href="mailto:gchifamba0@gmail.com" class="email-link mb-5">
+        gchifamba0@gmail.com
+      </a>
+      </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.intagram.com/grace">
+      <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://www.github.com/grace">
+      <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.facebook.com/grace">
+      <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+    </footer>
+    </div>
  </body>
 </html>
