Made the website SEO friendly, fixed the navigation and links

--- a/index.html
+++ b/index.html
@@ -13,24 +13,27 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Front-end Developer</title>
+<meta name="description" content="Grace is a front-end engineer based in SouthAfrica.">
+    <title>Front-end developer-Grace Chifamba</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-      <img src="images/logo.png"alt="">
+        <a href="/" title="Homepage">
+      <img src="images/logo.png"alt="grace logo" class="logo d-none d-md-block"/>
+       </a>
       <ul>
         <li class="active">
-          <a href="/">Home</a>
+          <a href="/" title="Homepage">Home</a>
          </li>
         <li>
-          <a href="/about.html">About</a>
+          <a href="/about.html"title="About Grace">About</a>
         </li>
         <li>
-          <a href="/work.html">Work</a>
+          <a href="/work.html" title="Grace's work">Work</a>
         </li>
         <li>
-          <a href="/contact.html">contact</a>
+          <a href="/contact.html" title="Contact Grace">contact</a>
         </li>
       </ul>
       </nav>
@@ -41,7 +44,7 @@
       <h1>Grace Chifamba</h1>
       <h2 class="mb-5">Front-end developer based in SouthAfrica</h2>
       <div>
-      <a href="" class=" btn btn-branding">Contact me</a>
+      <a href="/contact.html" class=" btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="m-5 text-center">
@@ -49,14 +52,14 @@
   <div class="container">
   <div class="row">
   <div class="col d-none d-lg-block shadow-sm">
-    <img src="images/baking.jpg" class="img-fluid" alt=""/>
+    <img src="images/baking.jpg" class="img-fluid" alt="baking project preview"/>
   </div>
   <div class="col">
     <div class="project-description">
       <h2 class="mb-5">Baking Project</h2>
     <p class="mb-5 text-muted">
       This project is about me creating something  i love to do every chance i get.I love to spoil myself ,my family, and those around me, and the best way to do this, is by baking a cake.I created this project using the basic HTML,CSS and JavaScript</p>
-    <a href="" class="btn btn-branding-outline">Learn more</a>
+    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
     </div>
     </div>
   </div>
@@ -66,23 +69,23 @@
       <h2 class="mb-5 ">Weather App</h2>
        <p class="mb-5 text-muted" >
       Developed a vanilla weather app using the following stages. Setup-includes creating a respitory at Git,Design,HTML,CSS,Search Engine-using advanced JavScript,API intergration and Forcast.Commit and publish at Git+Github then Deploy at Netlify</p>
-     <a href="" class="btn btn-branding-outline">Learn more</a>
+     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
    </div>
      </div>
   <div class="col d-none d-lg-block shadow-sm">
- <img src="images/weather.jpg"class="img-fluid"alt=""/>
+ <img src="images/weather.jpg"class="img-fluid"alt="weather app preview"/>
  </div>
     </div>
      <div class="row">
       <div class="col d-none d-lg-block shadow-sm">
-       <img src="images/directory.png"class="img-fluid"alt=""/>
+       <img src="images/directory.png"class="img-fluid"alt="dictionary app preview"/>
         </div>
       <div class="col">
           <div class="project-description">
       <h2 class="mb-5">Dictionary App</h2>
     <p class="mb-5 text-muted">
       An intuitive and user-friendly directory app.Implementing comprehensive word-search and defination functionalities using HTML,CSS and React.The seamless interaction between the front-end and back-end ensures real-time updates and accurate results for users seeking precise language information</p>
- <a href="" class="btn btn-branding-outline">Learn more</a>
+ <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
       </div>
     </div>
    </div>
@@ -90,31 +93,36 @@
  <footer>
     <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
       <div>
-    <h4>
+    <h3>
       Work  Inquiry
-    </h4>
+    </h3>
     <p class="text-muted">Let's work together</p>
       </div>
       <div>
-    <a href=""class="btn btn-branding">Contact me</a>
+    <a href="/contact.html"class="btn btn-branding" title="contact Grace">Contact me</a>
     </div>
     </div>
       <div class="d-flex justify-content-center">
-      <a href="mailto:gchifamba0@gmail.com" class="email-link mb-5">
+      <a href="mailto:gchifamba0@gmail.com" class="email-link mb-5" title="Email Grace">
         gchifamba0@gmail.com
       </a>
       </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.intagram.com/grace">
+          <a href="https://www.intagram.com/grace" target="_blank" title="Instagram">
       <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://www.github.com/grace">
+          <a href="https://www.github.com/gire1" target="_blank" title="Github Profile">
       <i class="fa-brands fa-github"></i>
           </a>
-          <a href="https://www.facebook.com/grace">
+          <a href="https://www.facebook.com/grace" target="_blank" title="Facebook Profile">
       <i class="fa-brands fa-facebook"></i>
           </a>
         </div>
+        <p class="text-center mt-5">👌This project was coded by Grace Chifamba,and is 
+         <a href="https://dapper-stroopwafel-aa6004.netlify.app/" target="_blank">
+          open-sourced</a>
+          
+        </p>
     </footer>
     </div>
  </body>
