--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/4d2a225b26.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="styles/portfolio.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
+<meta name="description" content="Showcasing some of the work Grace has been working on">
+<title>Front-end Developer</title>
 </head>
 <body>
+   <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+      <img src="images/logo.png"alt="grace logo" class="logo d-none d-md-block"/>
+       </a>
+      <ul>
+        <li>
+          <a href="/" title="Homepage">Home</a>
+         </li>
+        <li>
+          <a href="/about.html"title="About Grace">About</a>
+        </li>
+        <li>
+          <a href="/work.html" title="Grace's work">Work</a>
+        </li>
+        <li class="active">
+          <a href="/contact.html" title="Contact Grace">contact</a>
+        </li>
+      </ul>
+      </nav>
+    </div>
+    
     <div class="content-container container">
     <div class="content">
     <h1 class="mb-5"> Lets get in touch!</h1>
@@ -22,6 +55,39 @@
     <a href="https://www.istagram.com/grace.codes"target="_blank">@grace.codes</a>
 </p>
     </div>
+    <footer>
+    <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+      <div>
+    <h3>
+      Work  Inquiry
+    </h3>
+    <p class="text-muted">Let's work together</p>
+      </div>
+      <div>
+    <a href="/contact.html"class="btn btn-branding" title="contact Grace">Contact me</a>
+    </div>
+    </div>
+      <div class="d-flex justify-content-center">
+      <a href="mailto:gchifamba0@gmail.com" class="email-link mb-5" title="Email Grace">
+        gchifamba0@gmail.com
+      </a>
+      </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.intagram.com/grace" target="_blank" title="Instagram">
+      <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://www.github.com/gire1" target="_blank" title="Github Profile">
+      <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.facebook.com/grace" target="_blank" title="Facebook Profile">
+      <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <p class="text-center mt-5">👌This project was coded by Grace Chifamba,and is 
+         <a href="https://dapper-stroopwafel-aa6004.netlify.app/" target="_blank">
+          open-sourced</a>
+          </p>
+    </footer>
 </div>
 </body>
 </html>
