Made the web responsive

--- a/about.html
+++ b/about.html
@@ -45,7 +45,10 @@
       <div class="about-section-content">
     <h1 class="mb-5">Hi I am Grace Chifamba</h1>
     <h2 class="mb-4">Front-end developer based in SouthAfrica</h2>
-    <p> For anyone who wants to start learning code,this workshop is very interesting.You will be challenged with different exercises, and everything is well explained ,homework and deadlines are good for keep focus</p>
+     <p>
+     I'm currently seeking new opportunities in front-end development.
+              I'm open to work remotely and have flexible hours. I'm highly
+              skilled in JavaScript and React.</p>
     <a href="/work.html" class="btn btn-branding">see my projects</a>
     </div>
     </div>
