--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
     <div class="project-description">
       <h2 class="mb-5">Baking Project</h2>
     <p class="mb-5 text-muted">
-      This project is about me creating something  i love to do every chance i get.I love to spoil myself ,my family, and those around me, and the best way to do this, is by baking a cake.I created this project using the basic HTML,CSS and JavaScript</p>
+     I entered the world of front-end development by gaining some
+              knowledge in HTML, CSS, and JavaScript. I used my knowledge of
+              these languages, along with my new skills in VS Code, to build a
+              landing page about Baking. The page utilizes JavaScript functions
+              to create user interaction. 
+    </p>
     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
     </div>
     </div>
@@ -68,7 +73,12 @@
       <div class="project-description">
       <h2 class="mb-5 ">Weather App</h2>
        <p class="mb-5 text-muted" >
-      Developed a vanilla weather app using the following stages. Setup-includes creating a respitory at Git,Design,HTML,CSS,Search Engine-using advanced JavScript,API intergration and Forcast.Commit and publish at Git+Github then Deploy at Netlify</p>
+      I built a Vanilla JavaScript weather app in SheCodes Plus, an
+              advanced 8-week JavaScript coding workshop. Building upon my
+              previously-gained knowledge, I also became skilled in Bootstrap,
+              API's, real-life development workflow, hosting, and advanced
+              JavaScript. I combined all of these skills to create a
+              fully-functioning weather app.</p>
      <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
    </div>
      </div>
@@ -84,7 +94,10 @@
           <div class="project-description">
       <h2 class="mb-5">Dictionary App</h2>
     <p class="mb-5 text-muted">
-      An intuitive and user-friendly directory app.Implementing comprehensive word-search and defination functionalities using HTML,CSS and React.The seamless interaction between the front-end and back-end ensures real-time updates and accurate results for users seeking precise language information</p>
+      I immersed myself in React development in SheCodes React. I used
+              my knowledge of this highly-demanded framework to build a working
+              dictionary app incorporating coding best practices, along with the
+              most popular tools and technologies.</p>
  <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
       </div>
     </div>
